--- a/usetting.lfm
+++ b/usetting.lfm
@@ -7,8 +7,11 @@ object Frm_Setting: TFrm_Setting
   ClientHeight = 231
   ClientWidth = 467
   KeyPreview = True
+  OnCreate = FormCreate
   OnKeyDown = FormKeyDown
+  OnShow = FormShow
   Position = poScreenCenter
+  LCLVersion = '2.2.6.0'
   object pnlBottom: TPanel
     Left = 0
     Height = 43
